# fbw-system

./: CMakeLists.txt  FBWSystem.h  README.md  cardinal_direction.cpp  heading.cpp  left_aileron.cpp  vertical.h
include/fbw/: FBWSystem.h  aileron_position.h  cardinal_direction.cpp  heading.h  horizontal.h  left_aileron.h  right_aileron.h  stabiliser.h
src/: FBWSystem.cpp  main.cpp  right_aileron.cpp
tests/: test.c
